@@ -87,14 +87,16 @@ MASON_STATIC_SOURCE     = No
 # for the new() method may be used except the OUTPUT argument, which Bricolage
 # handles so that the output is sent to the same place as template Mason code
 # sends its content. Defaults to no arguments if unspecified. The directive
-# MASON_INTERP_ARGS is similar to XML_WRITER_ARGS except that the arguments
-# are passed to the Mason interpreter instantiated when burning an asset,
-# which will thus be available for your templates.
+# MASON_INTERP_ARGS AND TT_OPTIONS are similar to XML_WRITER_ARGS except that
+# the arguments are passed to the Mason interpreter instantiated when burning
+# a story with the Mason burner or the Template object instantiated when
+# burning a story with the Template Toolkit burner, respectively.
 
 BURN_ROOT               = /usr/local/bricolage/data/burn
 INCLUDE_XML_WRITER      = No
 XML_WRITER_ARGS         = NEWLINES => 1, UNSAFE => 1, DATA_MODE => 1, DATA_INDENT => 4
-# MASON_INTERP_ARGS    = 
+# MASON_INTERP_ARGS       = 
+# TT_OPTIONS              = PRE_CHOMP => 1, POST_CHOMP => 1, TRIM => 1
 
 # Authentication settings. AUTH_TTL is the amount of time, in seconds, a user
 # is allowed to be idle before he/she is automatically logged out. The default
